Moved slide preview

--- a/src/CoreBundle/Resources/views/admin/slider/edit.html.twig
+++ b/src/CoreBundle/Resources/views/admin/slider/edit.html.twig
@@ -47,8 +47,8 @@
                                             </button>
                                         </div>
                                         <div id="slider-preview-{{ key }}">
-                                            {{ render(controller('RiverwayCmsCoreBundle:Admin/Slider:renderSlidePreview', {
-                                                slide: slider.slides[key],
+                                            {{ render(controller('RiverwayCmsCoreBundle:Admin/Slide:renderSlidePreview', {
+                                                slide: slide.vars.value.id,
                                                 key: key
                                             })) }}
                                         </div>
