Optimize slider; Fixed interface bug; Some little fixes

--- a/src/CoreBundle/Resources/views/admin/slider/edit.html.twig
+++ b/src/CoreBundle/Resources/views/admin/slider/edit.html.twig
@@ -47,7 +47,7 @@
                                             </button>
                                         </div>
                                         <div id="slider-preview-{{ key }}">
-                                            {{ render(controller('RiverwayCmsCoreBundle:Admin/Slider:renderSlidePreview', {
+                                            {{ render(controller('RiverwayCmsCoreBundle:Admin/Slide:renderSlidePreview', {
                                                 slide: slider.slides[key],
                                                 key: key
                                             })) }}
