--- a/src/CoreBundle/Resources/public/styles/style.scss
+++ b/src/CoreBundle/Resources/public/styles/style.scss
@@ -165,7 +165,7 @@ body {
   }
 
   // SLIDER
-  .slider-preview-img {
+  .slide-preview-img {
     box-sizing: border-box;
     display: block;
     width: 600px;
