Added display property for slide

--- a/src/CoreBundle/Resources/views/admin/slider/edit.html.twig
+++ b/src/CoreBundle/Resources/views/admin/slider/edit.html.twig
@@ -29,6 +29,7 @@
                             <div class="form-group">
                                 <div class="row">
                                     <div class="col-5">
+                                        {{ form_row(slide.display) }}
                                         {{ form_row(slide.textAlign) }}
                                         {{ form_row(slide.marginTop) }}
                                         {{ form_row(slide.marginLeft) }}
