--- a/src/CoreBundle/Resources/public/styles/style.scss
+++ b/src/CoreBundle/Resources/public/styles/style.scss
@@ -24,10 +24,12 @@ body {
       & > div {
         margin-bottom: 20px;
       }
+
       label {
         display: block;
         font-weight: bold;
         padding-bottom: 4px;
+        padding-top: 10px;
       }
       input, button {
         padding: 8px;
@@ -46,6 +48,12 @@ body {
         display: inline-block;
         font-size: large;
       }
+    }
+
+    #map-canvas {
+      width: 100%;
+      height: 285px;
+      background: transparent url("../img/loader.gif") no-repeat center center;
     }
   }
 
@@ -72,6 +80,11 @@ body {
       }
 
       .widget-content {
+
+        label {
+          font-weight: normal;
+        }
+
         color: #6E6E6E;
         margin-bottom: 0px;
       }
