--- a/src/CoreBundle/Resources/views/crime-map-form.html.twig
+++ b/src/CoreBundle/Resources/views/crime-map-form.html.twig
@@ -1,3 +1,5 @@
+{% form_theme form with ['bootstrap_3_horizontal_layout.html.twig', 'TetranzSelect2EntityBundle:Form:fields.html.twig', 'RiverwayCmsCoreBundle:Form:fields.html.twig'] %}
+
 <div class="crime-map">
     <div class="crime-map-title">How safe is your area</div>
     <div class="crime-map-form">
