Changed form themes in templates

--- a/src/CoreBundle/Resources/views/admin/ajax-entity-form.html.twig
+++ b/src/CoreBundle/Resources/views/admin/ajax-entity-form.html.twig
@@ -1,3 +1,3 @@
-{% form_theme form with ['bootstrap_4_horizontal_layout.html.twig', 'TetranzSelect2EntityBundle:Form:fields.html.twig', 'RiverwayCmsCoreBundle:Form:fields.html.twig'] %}
+{% form_theme form with ['@RiverwayCmsCore/Form/bootstrap_4_horizontal_layout.html.twig', 'TetranzSelect2EntityBundle:Form:fields.html.twig', 'RiverwayCmsCoreBundle:Form:fields.html.twig'] %}
 
 {{ form(form) }}
