--- a/src/CoreBundle/Resources/views/Form/bootstrap_4_layout.html.twig
+++ b/src/CoreBundle/Resources/views/Form/bootstrap_4_layout.html.twig
@@ -1,4 +1,4 @@
-{% use "bootstrap_base_layout.html.twig" %}
+{% use "RiverwayCmsCoreBundle:Form:bootstrap_base_layout.html.twig" %}
 
 {# Widgets #}
 
