--- a/src/CoreBundle/Resources/views/admin/article/edit.html.twig
+++ b/src/CoreBundle/Resources/views/admin/article/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends '@RiverwayCmsCore/admin/admin_base.html.twig' %}
 
-{% form_theme form with ['@RiverwayCmsCore/Form/bootstrap_4_horizontal_layout.html.twig', 'TetranzSelect2EntityBundle:Form:fields.html.twig', 'RiverwayCmsCoreBundle:Form:fields.html.twig'] %}
+{% form_theme form with ['RiverwayCmsCoreBundle:Form:bootstrap_4_horizontal_layout.html.twig', 'TetranzSelect2EntityBundle:Form:fields.html.twig', 'RiverwayCmsCoreBundle:Form:fields.html.twig'] %}
 
 {% block body %}
 
